feat: rebuild the Tome tree as hubs that radiate, not lanes (#136)
Playtest of the band renderer in this PR raised three things.

The tree read as a list. Three lanes staggered either side of a centre
line is not the same as radiating from a centre, and §8's reference is
Diablo 4's tree: hubs you follow down a spine, each surrounded by its
own skills. Each cluster is now a hub — anchor at the centre, nodes on
rings around it — and radial distance from the anchor is prerequisite
depth inside that cluster and nothing else. A first-ring node is joined
to its anchor by a spoke, because the cluster gate really is all that
holds it.

The routing proof carries over in polar form. Rings are disjoint
annuli, boxes on a ring do not overlap in angle seen from the hub, and
a wedge either side of vertical is kept empty at every radius. An edge
travels along a node's own ray, around an arc inside a ring gap, or up
that corridor, so it cannot cross a box whatever nodes are added. Edges
between clusters still run out to the gutters.

Cross-cluster prerequisites no longer count toward in-cluster depth.
Vein Proliferation opens Excavation and requires Vein Expansion over in
Prospecting, and the old count put it on the second ring with an empty
first ring beneath it.

The page is drawn opaque. One-pixel prerequisite lines were competing
with whatever the player was standing in front of.

Boxes are measured from every line they will ever draw, not from the
node's name. The second line is the tier, cost and level requirement,
and a specialised fork parent's second line is the chosen option's
display name. Measuring the states a node is not in yet is also what
stops a box resizing when it is bought.

Routes are built once with the layout rather than per frame; an arc is
thirty-odd points and only its colour moves.

The cost is size: 944 by 6008 pixels against roughly 500 by 1540 for
the bands. The tab now opens centred on the first hub. DESIGN_LOG.md
records the trade and what the lever 